--- a/PROMO1/gallery.html
+++ b/PROMO1/gallery.html
@@ -35,14 +35,14 @@
         <div class="container mx-auto px-6 py-3">
             <div class="flex justify-center">
                 <ul class="flex space-x-1 md:space-x-6 overflow-x-auto py-2">
-                    <li><a href="#promotions" class="text-white px-4 py-2 rounded-full bg-yellow-500 bg-opacity-20 flex items-center justify-center"><i class="fas fa-users mr-2"></i> Promotions</a></li>
-                    <li><a href="#classes" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-graduation-cap mr-2"></i> cycles</a></li>
-                    <li><a href="#students" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-search mr-2"></i> Étudiants</a></li>
-                    <li><a href="#statistics" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-chart-bar mr-2"></i> Statistiques</a></li>
-                    <li><a href="#gallery" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-images mr-2"></i> Galerie</a></li>
+                    <li><a href="main.html#promotions" class="text-white px-4 py-2 rounded-full bg-yellow-500 bg-opacity-20 flex items-center justify-center"><i class="fas fa-users mr-2"></i> Promotions</a></li>
+                    <li><a href="main.html#classes" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-graduation-cap mr-2"></i> cycles</a></li>
+                    <li><a href="main.html#students" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-search mr-2"></i> Étudiants</a></li>
+                    <li><a href="main.html#statistics" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-chart-bar mr-2"></i> Statistiques</a></li>
+                    <li><a href="main.html#gallery" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-images mr-2"></i> Galerie</a></li>
 
-                    <li><a href="#about" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-info-circle mr-2"></i>ÀPropos</a></li>
-                    <li><a href="#contact" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-envelope mr-2"></i> Contact</a></li>
+                    <li><a href="main.html#about" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-info-circle mr-2"></i>ÀPropos</a></li>
+                    <li><a href="main.html#contact" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-envelope mr-2"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
