--- a/PROMO1/all-students.html
+++ b/PROMO1/all-students.html
@@ -31,19 +31,21 @@
     </section>
 
     <!-- Navigation -->
-    <nav class="glass-nav sticky top-0 z-50 shadow-md">
-        <div class="container mx-auto px-6 py-3">
-            <div class="flex justify-center">
-                <ul class="flex space-x-1 md:space-x-6 overflow-x-auto py-2">
-                    <li><a href="main.html#promotions" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition"><i class="fas fa-users mr-2"></i> Promotions</a></li>
-                    <li><a href="main.html#classes" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition"><i class="fas fa-graduation-cap mr-2"></i> Classes</a></li>
-                    <li><a href="search-student.html" class="text-white px-4 py-2 rounded-full bg-yellow-500 bg-opacity-20"><i class="fas fa-search mr-2"></i> Rechercher</a></li>
-                    <li><a href="main.html#about" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition"><i class="fas fa-info-circle mr-2"></i> À Propos</a></li>
-                    <li><a href="main.html#contact" class="text-white px-4 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition"><i class="fas fa-envelope mr-2"></i> Contact</a></li>
-                </ul>
-            </div>
+<nav class="glass-nav sticky top-0 z-50 shadow-md">
+    <div class="container mx-auto">
+        <div class="flex justify-center">
+            <ul class="flex space-x-1 md:space-x-2 lg:space-x-4 xl:space-x-6">
+                <li><a href="main.html#promotions" class="text-white px-3 py-2 rounded-full bg-yellow-500 bg-opacity-20 flex items-center justify-center"><i class="fas fa-users mr-1 md:mr-2"></i> <span class="hidden sm:inline">Promotions</span></a></li>
+                <li><a href="main.html#classes" class="text-white px-3 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-graduation-cap mr-1 md:mr-2"></i> <span class="hidden sm:inline">Cycles</span></a></li>
+                <li><a href="main.html#students" class="text-white px-3 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-search mr-1 md:mr-2"></i> <span class="hidden sm:inline">Étudiants</span></a></li>
+                <li><a href="main.html#statistics" class="text-white px-3 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-chart-bar mr-1 md:mr-2"></i> <span class="hidden sm:inline">Statistiques</span></a></li>
+                <li><a href="main.html#gallery" class="text-white px-3 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-images mr-1 md:mr-2"></i> <span class="hidden sm:inline">Galerie</span></a></li>
+                <li><a href="main.html#about" class="text-white px-3 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-info-circle mr-1 md:mr-2"></i> <span class="hidden sm:inline">À Propos</span></a></li>
+                <li><a href="main.html#contact" class="text-white px-3 py-2 rounded-full hover:bg-yellow-500 hover:bg-opacity-20 transition flex items-center justify-center"><i class="fas fa-envelope mr-1 md:mr-2"></i> <span class="hidden sm:inline">Contact</span></a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <main class="container mx-auto px-6 py-12">
         <!-- Filter Section -->
