--- a/PROMO1/gallery.html
+++ b/PROMO1/gallery.html
@@ -84,6 +84,48 @@
                     <p class="text-gray-600 text-sm">fevrier 2022</p>
                 </div>
             </div>
+            <div class="gallery-item rounded-xl overflow-hidden shadow-lg bg-white">
+                <img src="images/1.jpg" alt="Projets étudiants" class="w-full h-64 object-cover">
+                <div class="p-4">
+                    <h3 class="font-semibold">Salle Amphi</h3>
+                </div>
+            </div>
+            <div class="gallery-item rounded-xl overflow-hidden shadow-lg bg-white">
+                <img src="images/2.jpg" alt="Projets étudiants" class="w-full h-64 object-cover">
+                <div class="p-4">
+                    <h3 class="font-semibold">Travaux de renovation</h3>
+                </div>
+            </div>
+            <div class="gallery-item rounded-xl overflow-hidden shadow-lg bg-white">
+                <img src="images/3.jpg" alt="Projets étudiants" class="w-full h-64 object-cover">
+                <div class="p-4">
+                    <h3 class="font-semibold">Drapeaux de l'IAI</h3>
+                </div>
+            </div>
+            <div class="gallery-item rounded-xl overflow-hidden shadow-lg bg-white">
+                <img src="images/4.jpg" alt="Projets étudiants" class="w-full h-64 object-cover">
+                <div class="p-4">
+                    <h3 class="font-semibold">Accueil IAI Siège</h3>
+                </div>
+            </div>
+            <div class="gallery-item rounded-xl overflow-hidden shadow-lg bg-white">
+                <img src="images/5.jpg" alt="Projets étudiants" class="w-full h-64 object-cover">
+                <div class="p-4">
+                    <h3 class="font-semibold">Bâtiment des Salles de classes</h3>
+                </div>
+            </div>
+            <div class="gallery-item rounded-xl overflow-hidden shadow-lg bg-white">
+                <img src="images/6.jpg" alt="Projets étudiants" class="w-full h-64 object-cover">
+                <div class="p-4">
+                    <h3 class="font-semibold">Salle des Ingénieurs Concepteurs Niveau 1 </h3>
+                </div>
+            </div>
+            <div class="gallery-item rounded-xl overflow-hidden shadow-lg bg-white">
+                <img src="images/7.jpg" alt="Projets étudiants" class="w-full h-64 object-cover">
+                <div class="p-4">
+                    <h3 class="font-semibold">Parking IAI </h3>
+                </div>
+            </div>
         </div>
     </div>
 
